# qdrec

./: README.md  pyproject.toml
qdrec/: __main__.py  main.py
qdrec/api/: main.py  utils.py
qdrec/api/crud/: crud.py
qdrec/api/model/: excerpt_models.py  schemas.py
qdrec/api/querido_diario/db/: engine.py  models.py
qdrec/api/querido_diario/operations/: excerpts.py
qdrec/api/querido_diario/routers/: excerpts.py
qdrec/database/: connection.py
qdrec/qdrec_24_1/: pratica.py  reconhecimento.py
qdrec/scripts/: append_laws.py  append_nominations.py  append_regex.py  bert_ner_processor.py  google_scrapper.py  law_processor.py  multiprocess_request.py  preprocess_qd.py
