[tool.poetry]
name = "qdrec"
version = "0.1.0"
description = "Named entity recognition for the QueridoDiário project"
authors = ["Bernardo Costa <bernardo.costa@aluno.cefet-rj.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.2.2"
fastapi = "^0.112.0"
nltk = "^3.8.1"
beautifulsoup4 = "^4.12.3"
SQLAlchemy = "^2.0.32"
pydantic = "^2.8.2"
transformers = "^4.44.0"
simpleneighbors = "^0.1.0"
seaborn = "^0.13.2"
tensorflow-hub = "^0.16.1"
tensorflow-io-gcs-filesystem = "^0.27"
tensorflow = "2.10"
tensorflow-text = "2.10"
protobuf = "3.19.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"